# Remotecare

./: Cargo.toml  README.md  emergencies.json
src/: main.rs
