[package]
name = "remotecare"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }  # Command-line argument parsing
serde = { version = "1.0", features = ["derive"] }  # JSON handling
serde_json = "1.0"
chrono = "0.4"  # For timestamps
reqwest = { version = "0.11", features = ["blocking", "json"] }  # HTTP requests for API integration
